fix: logo z-index (for different places on the page)

--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -30,10 +30,6 @@ footer {
     font-size: 1.6rem;
     font-weight: 400;
     color: var(--text-color);
-
-    .logo {
-        z-index: initial;
-    }
 }
 
 .footer__text {
