--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -23,6 +23,10 @@ header {
     font-size: 1.8rem;
     font-weight: 600;
     background-color: var(--color-contrast);
+
+    .logo {
+        z-index: var(--header-z-index);
+    }
 }
 
 .header__navs {
