--- a/src/styles/elements/Logo.scss
+++ b/src/styles/elements/Logo.scss
@@ -1,7 +1,6 @@
 @use "../helpers/abstracts.scss" as *;
 
 .logo {
-    z-index: var(--header-z-index);
     display: block;
     width: 100%;
     cursor: pointer;
